--- a/src/look.styl
+++ b/src/look.styl
@@ -162,7 +162,7 @@ section#content
 	position relative
 	z-index 100
 	animation-delay 2s
-	line-height 20px
+	line-height 1.2em
 	-webkit-font-smoothing antialiased
 
 	.content
@@ -220,28 +220,41 @@ section#content
 	// Comparison table
 	// ----------------
 
+	c_yes = hsl(60,50%,50%)
+	c_no = hsl(0,50%,50%)
+
 	.comparison
 		width 100%
 		margin 10px auto 20px
 		//border-collapse collapse
 
+		col
+			width 30%
+
 		col.mid
-			width 25%
+			width 35%
+
+		col.ref
+			width 5%
 
 		tr
 			td
 			th
+				position relative
 				padding 0.5em 2ex
 				line-height 1em
-				transition opacity 200ms
+				//transition opacity 200ms
 
 				&:first-child
 					text-align right
-				&:last-child
-					text-align left
+				//&:last-child
+				//	text-align left
 				&.mid
 					text-align center
-		
+
+		tbody td
+			border 1px solid rgba(black, 0.2)
+
 		th
 			background #ddd
 
@@ -250,33 +263,56 @@ section#content
 
 		td.kb
 			font-size 1.3em
-		
+
+		td.hidden
+			border 0px none
+			background none transparent
+
 		td.yes
-			background hsl(60,50%,50%)
+			background c_yes
 			color white
 		td.no
-			background hsl(0,50%,50%)
+			background c_no
 			color white
 
 		td.own
 			text-align center
-			background hsl(60,50%,50%)
+			background c_yes
 			color hsl(60,50%,10%)
 
 		td.done
 			font-family Helvetica, Arial, sans-serif
-			background hsl(60,50%,50%)
+			background c_yes
 			color hsl(60,50%,20%)
 			text-shadow 0px -1px 0px hsl(60,50%,10%)
 			font-size 2em
 			padding 0px
 			text-align center
 
+		td.ref
+			padding-left 0px
+			padding-right 0px
+			text-align center
+			border 0px none
+			line-height 0.5em
+
 		&:hover
 			tr td
 				opacity 0.7
 			tr:hover td
 				opacity 1
+
+		td.dependent:before
+			content '▼'
+			display block
+			position absolute
+			top -0.5em
+			left 50%
+			font-size 20px
+			line-height 1em
+			width 3em
+			margin -2px -1.5em
+			color hsl(60,50%,20%)
 
 		/*
 		.col .content
@@ -296,4 +332,13 @@ section#content
 			.content
 				border-left 0px none
 		*/
-
+	
+	.notes
+		font-size 0px
+		section
+			width 30%
+			display inline-block
+			font-size 13px
+			margin-right 3%
+			vertical-align top
+			*float left
