--- a/src/index.jade
+++ b/src/index.jade
@@ -63,13 +63,16 @@ html
             h2 Dependencies
             p.
               Knockback requires Backbone (and therefore Underscore.js) and Knockout.js
-              to be already loaded on the page.
+              to be already loaded on the page. Backbone.ModelRef is optional for lazy
+              model loading scenarios.
           .col: div.content
             h2 Features
             ul
               li Localization
               li Knockout.js' bindings and automagical update
               li Backbone's sleek Model definition
+              li Dynamic collection sorting
+              li Two-way string formatting
           .col: div.content
             h2 Latest <small>0.6</small>
             ul
@@ -103,7 +106,7 @@ html
                 td.no Weak ORM
                 td.hidden
               tr
-                td.yes (De)Serialization
+                td.yes Built-in Serialization / Deserialization
                 td.done &#9754;
                 td.no Manual serialization
                 td.ref!= ref(descr, refer, 1)
@@ -113,12 +116,12 @@ html
                 td.yes: abbr(title="Model/View/ViewModel") MVVM
                 td.hidden
               tr
-                td.no DOM Maninulation utils
+                td.no Low level DOM maninulation
                 td.done &#9755;
-                td.yes simplifies jQuery use to the minimal effort needed
+                td.yes Reduced jQuery effort
                 td.hidden
               tr
-                td.no Manual views update
+                td.no Manual view updating
                 td.done &#9755;
                 td.yes <code>data-bind</code> based sorcery
                 td.hidden
@@ -128,23 +131,23 @@ html
                 td.no No routing
                 td.ref!= ref(descr, refer, 2)
               tr
-                td.no Blurred Views/Controllers
-                td.own Proper Model/View/Controller (ViewModel) separation
-                td.no Blurred Models/Controllers (ViewModels)
+                td.no Blurred separation between: <br> Views | Controllers
+                td.own Proper separation between: <br> Models | Views | Controllers (ViewModels)
+                td.no Blurred separation between: <br> Models | Controllers (ViewModels)
                 td.ref!= ref(descr, refer, 3)
               tr
                 td.hidden
-                td.own.dependent Cross-view Model state synchronizing
+                td.own.dependent Cross-view Model state synchronization
                 td.hidden
                 td.hidden
               tr
-                td.no Messy collection/view update
+                td.no Messy collection/view updating
                 td.own Fully sorted and updated collection views
                 td.hidden
                 td.hidden
               tr
                 td.hidden
-                td.own View control settings
+                td.own View settings and control properties
                 td.hidden
                 td.ref!= ref(descr, refer, 4)
               tr
@@ -161,45 +164,45 @@ html
                 =============
 
                 As you probably know, Backbone is known to have a fantastic syncing system built
-                to go as close as possible to the RESTful pattern. And if this is not good for
-                your application you can always opt to a custom `Backbone.sync`. And granularity
-                is also possible setting a Model/Collection's own `sync`.
+                as close as possible to the RESTful pattern. And if this is not good for your
+                application you can always opt to build a custom `Backbone.sync` or, if further
+                granularity is required, you can customize a Model/Collection's own `sync` function.
 
-                Knockout.js instead does not provide with such a feature, and what it offers
-                is a simple plugin to map into/from any source.
+                Knockout.js instead does not provide such a feature, and what it offers is a simple
+                plugin to map into/from any JSON source.
 
-                Knockback uses Backbone's models and collections, and this implies that all the
-                serialization features we all love are still there.
+                Knockback uses Backbone's models and collections, and this means that all the
+                serialization features we all love are still there!
 
             #comparison-2
               :markdown
                 Routing
                 =======
-                
+
                 In Knockback, while using Knockout.js ViewModel pattern, we developed a full
-                pattern that uses Backbone's routing support.
+                pattern that supports Backbone's routing solution.
 
           section#comparison-3
             :markdown
-              (In)proper use of tools
+              (Im)proper use of tools
               =======================
-              
+
               Too often, in a large Backbone application you find yourself building up views
-              with too much logic in it, almost always managing sub-states. This is actually
-              an improper use of views, which should be as logic-less as possible.
+              with too much logic in them, almost always requiring sub-state management. This is
+              actually an improper use of views, which should be as logic-less as possible.
 
               But you *have* to do things like that, and Backbone doesn't help the developer
               solving this (ethical?) issue.
 
-              In Knockout.js, this is not a problem, because ViewModels differs from Views
-              exactly in this: they own states, methods and properties as a model does, and only
-              the *view* part of the concept is logic-less.
+              In Knockout.js, this is not a problem, because ViewModels differ from Views
+              exactly in this: they own states, methods and properties allowing the *views* to
+              be logic-less.
 
-              So Knockout solves the blurres View/Controller issue you'll find building large
-              applications with Backbone. **But** Knockout simply provides ViewModels and no
-              Models. So how can you build a proper MVVM? *Backbone to the rescue!*
+              So Knockout solves the blurry View/Controller issue you'll find building large
+              applications with Backbone. **But** because Knockout simply provides ViewModels and no
+              Models, how can you build a proper MVC/MVVM? *Backbone to the rescue!*
 
-              And the circle is complete: Models from Backbone, and View/ViewModels from
+              And the circle is complete: Models from Backbone, and Views/ViewModels from
               Knockout.js.
 
           section#comparison-4
@@ -207,14 +210,14 @@ html
               Views' settings
               ===============
 
-              Following MVVM principles where a ViewModel is the View's Model, and therefore
+              Following MVVM principles where a ViewModel is the "View's Model", and therefore
               owns its own properties and methods which are *then* reflected in the View
-              itself, Knockback ViewModels have setting and control properties, which are not
-              owned by the model.
+              itself, Knockback ViewModels can add View setting and control properties, which are not
+              (and should not be!) owned by the model.
 
               What does this allow? Actual settings (*eg* colors for different priorities in a
-              task list ) to be applied on all the associated ViewModels, or something more
-              interesting, like localization.
+              task list) to be applied on all the associated ViewModels, or...something more
+              interesting, like an design pattern for localization.
 
               If you consider localized labels as observed properties, then you can understand
               how Knockback provides internationalization to your applications.
@@ -228,7 +231,7 @@ html
                 kb.observables(model, {
                   name:  {key:'name'}
                   email: {key:'email', write: true, default: 'your.name@yourplace.com'}
-                  date:  {key:'date', write: true, localizer: (value) => return new LongDateLocalizer(value)}
+                  date:  {key:'date', write: true, localizer: LongDateLocalizer}
                 }, this)
                 return @
               # Cool, isn't it?
@@ -237,7 +240,7 @@ html
                 kb.observables(model, {
                   name:  {key:'name'},
                   email: {key:'email', write: true, default: 'your.name@yourplace.com'},
-                  date:  {key:'date', write: true, localizer: function (value) { return new LongDateLocalizer(value) } },
+                  date:  {key:'date', write: true, localizer: LongDateLocalizer } },
                 }, this);
                 return this;
               };
