--- a/src/look.styl
+++ b/src/look.styl
@@ -168,6 +168,12 @@ section#content
 	.content
 		padding 0 10px
 
+	.cols.wrapped
+		border 1px solid gray
+		padding 0 10px
+		margin 10px
+		border-radius 3px
+
 	.cols
 		overflow hidden
 		.col
@@ -243,6 +249,7 @@ section#content
 				position relative
 				padding 0.5em 2ex
 				line-height 1em
+				text-align left
 				//transition opacity 200ms
 
 				&:first-child
@@ -335,10 +342,39 @@ section#content
 	
 	.notes
 		font-size 0px
+		h2
+			font-size 0px
+			margin 0px
+			padding 0px
+			line-height 0px
+			text-indent -9999px
+			overflow hidden
 		section
 			width 30%
 			display inline-block
 			font-size 13px
-			margin-right 3%
+			padding 0
+			margin-right 1%
 			vertical-align top
 			*float left
+			> *
+				padding 1px 3%
+
+	:target
+		background rgba(black,0.1)
+
+// Footer
+// ------
+
+footer
+	font-size 12px
+	border-top 2px solid gray
+	margin-top 3em
+	padding-top 1em
+	padding-bottom 1em
+	text-align center
+
+	p:last-child
+		font-size 0.8em
+		margin-top 1ex
+
