Updated version, file size

--- a/src/index.jade
+++ b/src/index.jade
@@ -74,10 +74,10 @@ html
               li Dynamic collection sorting
               li Two-way string formatting
           .col: div.content
-            h2 Latest <small>0.6</small>
+            h2 Latest <small>0.12</small>
             ul
-              li <a href="https://raw.github.com/kmalakoff/knockback/master/knockback.js">Development</a> <small>23 KB</small>
-              li <a href="https://raw.github.com/kmalakoff/knockback/master/knockback.min.js">Production</a> <small>14.8 KB</small>
+              li <a href="https://raw.github.com/kmalakoff/knockback/0.12.0/knockback.js">Development</a> <small>45 KB</small>
+              li <a href="https://raw.github.com/kmalakoff/knockback/0.12.0/knockback.min.js">Production</a> <small>28 KB</small>
             h2 Source
             :markdown
               You can find the source on [Github][0]. To provide feedback leave a message
