A better green for the comparison table, and some stylish enhancements

--- a/src/index.jade
+++ b/src/index.jade
@@ -102,7 +102,7 @@ html
               th Backbone
               th.kb.mid Knockback
               th Knockout.js
-              th(title="Notes") !
+              th.ref(title="Notes") !
             - var count = 0;
             - var refer = 'comparison-';
             - var descr = 'View description';
