--- a/src/look.styl
+++ b/src/look.styl
@@ -226,7 +226,7 @@ section#content
 	// Comparison table
 	// ----------------
 
-	c_yes = hsl(60,50%,50%)
+	c_yes = hsl(90,40%,50%)
 	c_no = hsl(0,50%,50%)
 
 	.comparison
@@ -259,6 +259,9 @@ section#content
 				&.mid
 					text-align center
 
+				&.ref
+					text-align center
+
 		tbody td
 			border 1px solid rgba(black, 0.2)
 
@@ -278,20 +281,23 @@ section#content
 		td.yes
 			background c_yes
 			color white
+			text-shadow 0px 1px 0px rgba(black,0.2)
 		td.no
 			background c_no
 			color white
+			text-shadow 0px -1px 0px rgba(black,0.2)
 
 		td.own
 			text-align center
 			background c_yes
-			color hsl(60,50%,10%)
+			color hsl(90,40%,10%)
+			text-shadow 0px -1px 0px hsl(90, 60%, 70%)
 
 		td.done
 			font-family Helvetica, Arial, sans-serif
 			background c_yes
-			color hsl(60,50%,20%)
-			text-shadow 0px -1px 0px hsl(60,50%,10%)
+			color hsl(90,40%,20%)
+			text-shadow 0px -1px 0px hsl(90,40%,10%)
 			font-size 2em
 			padding 0px
 			text-align center
@@ -299,7 +305,6 @@ section#content
 		td.ref
 			padding-left 0px
 			padding-right 0px
-			text-align center
 			border 0px none
 			line-height 0.5em
 
@@ -319,7 +324,7 @@ section#content
 			line-height 1em
 			width 3em
 			margin -2px -1.5em
-			color hsl(60,50%,20%)
+			color hsl(90,40%,20%)
 
 		/*
 		.col .content
